auto overflow for help bar, fixes #504
Closes #504

Merge request studip/studip!2192

--- a/resources/assets/stylesheets/scss/helpbar.scss
+++ b/resources/assets/stylesheets/scss/helpbar.scss
@@ -57,6 +57,9 @@ $border-width: 4px;
     width: $helpbar-width;
     z-index: 1000;
 
+    overflow: auto;
+    max-height: calc(100vh - 200px);
+
     &::before {
         border-bottom: 2px solid var(--base-color-80);
         border-left: $border-width solid transparent;
